--- a/Lesson04.html
+++ b/Lesson04.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="/css/master.css">
+  </head>
   <p>My family and I visited The Epcot center this summer.</p>
 
   <aside>
