added fancy favicon

--- a/Ben/spinning_table.html
+++ b/Ben/spinning_table.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Table Spinner</title>
+    <link rel="shortcut icon" type="image/png" href="http://iconleafs.com/files/apathae/chakram-2-icons/desk/512/desk-opti.png"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
