aside tag example

--- a/Lesson04.html
+++ b/Lesson04.html
@@ -2,10 +2,15 @@
   <head>
     <link rel="stylesheet" href="/css/master.css">
   </head>
-  <p>My family and I visited The Epcot center this summer.</p>
+  <body>
+    <p>My family and I visited The Epcot center this summer.</p>
 
-  <aside>
-    <h4>Epcot Center</h4>
-    <p>The Epcot Center is a theme park in Disney World, Florida.</p>
-  </aside>
+    <aside>
+      <h4>Epcot Center</h4>
+      <p>The Epcot Center is a theme park in Disney World, Florida.</p>
+    </aside>
+
+    <p><strong>Note:</strong> The aside tag is not supported in Internet
+      Explorer 8 and earlier versions.</p>
+  </body>
 </html>
