--- a/Lesson01.html
+++ b/Lesson01.html
@@ -2,4 +2,7 @@
     <h1>Hello World</h1>
     </br>
     <h2>some stuff</h2>
+    <script type="text/javascript">
+      alert('My fun alert!!!');
+    </script>
 </html>
